components/namespace-lister/policies/ns-label/.chainsaw-test/chainsaw-assert-clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-namespace-enforce-label
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
