components/namespace-lister/policies/ns-label/.chainsaw-test/resources/expected-namespace-toolchain.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-toolchain
  labels:
    toolchain.dev.openshift.com/type: tenant
    konflux-ci.dev/type: tenant
